Save Raw Image done, need to do and know what to do in Bitpacking part

--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -58,9 +58,9 @@
    "outputs": [],
    "source": [
     "######SAVE RAW IMAGE######\n",
-    "#decodedFile=\"../images/n1_GRAY.1_2560_2048_1_0_8_0_0_0d.raw\"\n",
-    "#ImageRawDecoded = save_image_raw(decodedFile)\n",
-    "#ImageRawDecoded.save_image_raw(original_image,\"uint8\")\n",
+    "decodedFile=\"../images/n1_GRAY.1_2560_2048_1_0_8_0_0_0_copy.raw\"\n",
+    "ImageRawDecoded = save_image_raw(decodedFile)\n",
+    "ImageRawDecoded.save_image_raw(original_image,\"uint8\")\n",
     "###########"
    ]
   },
@@ -68,10 +68,27 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb Celda 5\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m bitpacking_coding\u001b[39m.\u001b[39mcoding()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m original_size_in_bytes \u001b[39m=\u001b[39m ImageRaw\u001b[39m.\u001b[39mget_original_size_in_bytes()\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m CR \u001b[39m=\u001b[39m original_size_in_bytes \u001b[39m/\u001b[39m bitpacking_coding\u001b[39m.\u001b[39msize_of_coded_file\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(original_size_in_bytes)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(bitpacking_coding\u001b[39m.\u001b[39msize_of_coded_file)\n",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
    "source": [
-    "aux = binary_file_output(\"../images/n1_GRAY.1_2560_2048_1_0_8_0_0_0d.raw\")\n",
-    "aux.write_value(2,10)"
+    "###BITPACKING CODING###\n",
+    "bitpacking_coding = BitPacking(\"bitpacket.txt\" ,original_image)\n",
+    "bitpacking_coding.coding()\n",
+    "original_size_in_bytes = ImageRaw.get_original_size_in_bytes()\n",
+    "CR = original_size_in_bytes / bitpacking_coding.size_of_coded_file\n",
+    "print(original_size_in_bytes)\n",
+    "print(bitpacking_coding.size_of_coded_file)"
    ]
   }
  ],
