--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -4,19 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'numpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcodingTools\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -29,19 +17,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'load_image_raw' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m originalFile\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../images/n1_GRAY.1_2560_2048_1_0_8_0_0_0.raw\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;66;03m#uint8\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m#ImageRaw = load_image_raw(originalFile, 1, 512, 512, \"int16\") #https://numpy.org/doc/stable/reference/arrays.dtypes.html\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m ImageRaw \u001b[38;5;241m=\u001b[39m \u001b[43mload_image_raw\u001b[49m(originalFile, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2560\u001b[39m, \u001b[38;5;241m2048\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muint8\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;66;03m#https://numpy.org/doc/stable/reference/arrays.dtypes.html\u001b[39;00m\n\u001b[0;32m      7\u001b[0m original_image \u001b[38;5;241m=\u001b[39m ImageRaw\u001b[38;5;241m.\u001b[39mload_image_raw()\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m##############################\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'load_image_raw' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "######LOAD RAW IMAGE######\n",
     "#dtype --> > stands for big endian, i stands for integer, 2 stands for 2 bytes\n",
@@ -59,14 +35,12 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'statistics' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m########STATISTICS##########\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m statistics \u001b[38;5;241m=\u001b[39m \u001b[43mstatistics\u001b[49m(original_image)\n\u001b[0;32m      3\u001b[0m entropy \u001b[38;5;241m=\u001b[39m statistics\u001b[38;5;241m.\u001b[39mcompute_entropy()\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124morder zero entropy of the image: \u001b[39m\u001b[38;5;124m\"\u001b[39m,entropy)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'statistics' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max Value:  255\n",
+      "Min Value:  0\n",
+      "order zero entropy of the image:  7.426142695578908\n"
      ]
     }
    ],
@@ -81,19 +55,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'save_image_raw' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m######SAVE RAW IMAGE######\u001b[39;00m\n\u001b[0;32m      2\u001b[0m decodedFile\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../images/n1_GRAY.1_2560_2048_1_0_8_0_0_0_copy.raw\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 3\u001b[0m ImageRawDecoded \u001b[38;5;241m=\u001b[39m \u001b[43msave_image_raw\u001b[49m(decodedFile)\n\u001b[0;32m      4\u001b[0m ImageRawDecoded\u001b[38;5;241m.\u001b[39msave_image_raw(original_image,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muint8\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m###########\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'save_image_raw' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "######SAVE RAW IMAGE######\n",
     "decodedFile=\"../images/n1_GRAY.1_2560_2048_1_0_8_0_0_0_copy.raw\"\n",
@@ -108,14 +70,17 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'BitPacking' is not defined",
+     "ename": "AttributeError",
+     "evalue": "'numpy.int64' object has no attribute 'to_bytes'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m###BITPACKING CODING###\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m bitpacking_coding \u001b[38;5;241m=\u001b[39m \u001b[43mBitPacking\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbitpacket.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m ,original_image)\n\u001b[0;32m      3\u001b[0m bitpacking_coding\u001b[38;5;241m.\u001b[39mcoding()\n\u001b[0;32m      4\u001b[0m original_size_in_bytes \u001b[38;5;241m=\u001b[39m ImageRaw\u001b[38;5;241m.\u001b[39mget_original_size_in_bytes()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'BitPacking' is not defined"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb Celda 5\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m###BITPACKING CODING###\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m bitpacking_coding \u001b[39m=\u001b[39m BitPacking(\u001b[39m\"\u001b[39m\u001b[39mbitpacket.txt\u001b[39m\u001b[39m\"\u001b[39m ,original_image)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m bitpacking_coding\u001b[39m.\u001b[39mcoding()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m original_size_in_bytes \u001b[39m=\u001b[39m ImageRaw\u001b[39m.\u001b[39mget_original_size_in_bytes()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m CR \u001b[39m=\u001b[39m original_size_in_bytes \u001b[39m/\u001b[39m bitpacking_coding\u001b[39m.\u001b[39msize_of_coded_file\n",
+      "File \u001b[0;32m~/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/codingTools/BitPacking.py:35\u001b[0m, in \u001b[0;36mBitPacking.coding\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     33\u001b[0m         \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns):\n\u001b[1;32m     34\u001b[0m             value \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mimage_data[i, j, k]\n\u001b[0;32m---> 35\u001b[0m             BFO\u001b[39m.\u001b[39mwrite_value(value, \u001b[39m32\u001b[39m)  \u001b[39m# 32-bit integer\u001b[39;00m\n\u001b[1;32m     36\u001b[0m             \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msize_of_coded_file \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m4\u001b[39m  \u001b[39m# 4 bytes per value\u001b[39;00m\n\u001b[1;32m     38\u001b[0m \u001b[39m# Close the binary file\u001b[39;00m\n",
+      "File \u001b[0;32m~/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/codingTools/binary_file_output.py:43\u001b[0m, in \u001b[0;36mbinary_file_output.write_value\u001b[0;34m(self, value, num_of_bits)\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(num_of_bits):\n\u001b[1;32m     42\u001b[0m     bit \u001b[39m=\u001b[39m (value \u001b[39m>>\u001b[39m (num_of_bits \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m \u001b[39m-\u001b[39m i)) \u001b[39m&\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m---> 43\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwrite_bit(bit)\n",
+      "File \u001b[0;32m~/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/codingTools/binary_file_output.py:34\u001b[0m, in \u001b[0;36mbinary_file_output.write_bit\u001b[0;34m(self, bit)\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbyte \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbyte \u001b[39m|\u001b[39m (bit \u001b[39m<<\u001b[39m (\u001b[39m8\u001b[39m \u001b[39m-\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcounter_bit))\n\u001b[1;32m     32\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcounter_bit \u001b[39m==\u001b[39m \u001b[39m8\u001b[39m:\n\u001b[1;32m     33\u001b[0m     \u001b[39m#print(\"writting a byte\")\u001b[39;00m\n\u001b[0;32m---> 34\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbinary_file\u001b[39m.\u001b[39mwrite(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbyte\u001b[39m.\u001b[39mto_bytes(\u001b[39m1\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mbig\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[1;32m     35\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcounter_bit \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m     36\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbyte \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.int64' object has no attribute 'to_bytes'"
      ]
     }
    ],
@@ -153,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.4"
   },
   "toc-autonumbering": true
  },
