--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -66,7 +66,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Quantizer data###\n",
+    "quantizer = Quantizer(1,10)\n",
+    "image_data_quantized = ImageRaw.get_image_structure_empty()\n",
+    "quantizer.quantize(original_image, image_data_quantized)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imagen original: \n",
+      " [[[123 123 118 ... 122 120 121]\n",
+      "  [120 123 123 ... 122 119 121]\n",
+      "  [123 122 123 ... 118 121 118]\n",
+      "  ...\n",
+      "  [ 96 162 195 ...  68  64  69]\n",
+      "  [ 62  56  65 ... 105 101 103]\n",
+      "  [ 94 103 101 ... 123 129 131]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Imagen original: \\n {original_image}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +112,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb Celda 5\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m bitpacking_coding\u001b[39m.\u001b[39mcoding()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m original_size_in_bytes \u001b[39m=\u001b[39m ImageRaw\u001b[39m.\u001b[39mget_original_size_in_bytes()\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m CR \u001b[39m=\u001b[39m original_size_in_bytes \u001b[39m/\u001b[39m bitpacking_coding\u001b[39m.\u001b[39msize_of_coded_file\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(original_size_in_bytes)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(bitpacking_coding\u001b[39m.\u001b[39msize_of_coded_file)\n",
+      "\u001b[1;32m/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb Celda 7\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m bitpacking_coding\u001b[39m.\u001b[39mcoding()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m original_size_in_bytes \u001b[39m=\u001b[39m ImageRaw\u001b[39m.\u001b[39mget_original_size_in_bytes()\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m CR \u001b[39m=\u001b[39m original_size_in_bytes \u001b[39m/\u001b[39m bitpacking_coding\u001b[39m.\u001b[39msize_of_coded_file\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(original_size_in_bytes)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(bitpacking_coding\u001b[39m.\u001b[39msize_of_coded_file)\n",
       "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
      ]
     }
