--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -10,7 +10,7 @@
     "import os\n",
     "import numpy as np\n",
     "\n",
-    "from codingTools import *"
+    "from codingTools import *\n"
    ]
   },
   {
@@ -66,14 +66,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imagen Original: [[[123 123 118 ... 113 108 108]\n",
+      "  [125 124 122 ... 110 110 105]\n",
+      "  [124 123 123 ... 102 108 106]\n",
+      "  ...\n",
+      "  [130 131 132 ... 130 130 129]\n",
+      "  [129 129 128 ... 125 126 130]\n",
+      "  [129 127 129 ... 123 129 131]]]\n",
+      "Imagen quantizada: [[[0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  ...\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### Quantizer data###\n",
-    "quantizer = Quantizer(1,10)\n",
+    "### Quantize ###\n",
+    "quantize = Quantizer(1, 10)\n",
     "image_data_quantized = ImageRaw.get_image_structure_empty()\n",
-    "quantizer.quantize(original_image, image_data_quantized)"
+    "print(f\"Imagen Original: {original_image}\")\n",
+    "quantize.quantize(original_image, image_data_quantized)\n",
+    "print(f\"Imagen quantizada: {image_data_quantized}\")\n",
+    "\n"
    ]
   },
   {
@@ -85,47 +109,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Imagen original: \n",
-      " [[[123 123 118 ... 122 120 121]\n",
-      "  [120 123 123 ... 122 119 121]\n",
-      "  [123 122 123 ... 118 121 118]\n",
+      "Dequantize: [[[0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
       "  ...\n",
-      "  [ 96 162 195 ...  68  64  69]\n",
-      "  [ 62  56  65 ... 105 101 103]\n",
-      "  [ 94 103 101 ... 123 129 131]]]\n"
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]]]\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Imagen original: \\n {original_image}\")"
+    "### Dequantize ###\n",
+    "dequantize = Quantizer(1,10)\n",
+    "image_data_dequantized = ImageRaw.get_image_structure_empty()\n",
+    "dequantize.dequantize(image_data_quantized, image_data_dequantized)\n",
+    "print(f\"Dequantize: {image_data_dequantized}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb Celda 7\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m bitpacking_coding\u001b[39m.\u001b[39mcoding()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m original_size_in_bytes \u001b[39m=\u001b[39m ImageRaw\u001b[39m.\u001b[39mget_original_size_in_bytes()\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m CR \u001b[39m=\u001b[39m original_size_in_bytes \u001b[39m/\u001b[39m bitpacking_coding\u001b[39m.\u001b[39msize_of_coded_file\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(original_size_in_bytes)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/InteractiveCodingImageTool.ipynb#W4sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(bitpacking_coding\u001b[39m.\u001b[39msize_of_coded_file)\n",
-      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "### PAE ###\n",
+    "# we use original_image\n",
+    "\n",
+    "\n",
+    "pae = Metrics(original_image, image_data_dequantized)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "###BITPACKING CODING###\n",
-    "bitpacking_coding = BitPacking(\"bitpacket.txt\" ,original_image)\n",
-    "bitpacking_coding.coding()\n",
-    "original_size_in_bytes = ImageRaw.get_original_size_in_bytes()\n",
-    "CR = original_size_in_bytes / bitpacking_coding.size_of_coded_file\n",
-    "print(original_size_in_bytes)\n",
-    "print(bitpacking_coding.size_of_coded_file)"
+    "# bitpacking_coding = BitPacking(\"bitpacket.txt\" ,original_image)\n",
+    "# bitpacking_coding.coding()\n",
+    "# original_size_in_bytes = ImageRaw.get_original_size_in_bytes()\n",
+    "# CR = original_size_in_bytes / bitpacking_coding.size_of_coded_file\n",
+    "# print(original_size_in_bytes)\n",
+    "# print(bitpacking_coding.size_of_coded_file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
