--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -80,13 +80,13 @@
       "  [130 131 132 ... 130 130 129]\n",
       "  [129 129 128 ... 125 126 130]\n",
       "  [129 127 129 ... 123 129 131]]]\n",
-      "Imagen quantizada: [[[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "Imagen quantizada: [[[12. 12. 11. ... 11. 10. 10.]\n",
+      "  [12. 12. 12. ... 11. 11. 10.]\n",
+      "  [12. 12. 12. ... 10. 10. 10.]\n",
       "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]]\n"
+      "  [13. 13. 13. ... 13. 13. 12.]\n",
+      "  [12. 12. 12. ... 12. 12. 13.]\n",
+      "  [12. 12. 12. ... 12. 12. 13.]]]\n"
      ]
     }
    ],
@@ -109,13 +109,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dequantize: [[[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "Dequantize: [[[120. 120. 110. ... 110. 100. 100.]\n",
+      "  [120. 120. 120. ... 110. 110. 100.]\n",
+      "  [120. 120. 120. ... 100. 100. 100.]\n",
       "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]]\n"
+      "  [130. 130. 130. ... 130. 130. 120.]\n",
+      "  [120. 120. 120. ... 120. 120. 130.]\n",
+      "  [120. 120. 120. ... 120. 120. 130.]]]\n"
      ]
     }
    ],
@@ -131,18 +131,25 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.0\n",
+      "9.0\n"
+     ]
+    }
+   ],
    "source": [
     "### PAE ###\n",
-    "# we use original_image\n",
-    "\n",
-    "\n",
-    "pae = Metrics(original_image, image_data_dequantized)\n"
+    "pae = Metrics(original_image, image_data_dequantized)\n",
+    "print(pae.PAE_data)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,13 +161,6 @@
     "# print(original_size_in_bytes)\n",
     "# print(bitpacking_coding.size_of_coded_file)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
