MSE, PSNR, PAE Done

--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -136,20 +136,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.0\n",
-      "9.0\n"
+      "Pae: 9.0\n"
      ]
     }
    ],
    "source": [
     "### PAE ###\n",
     "pae = Metrics(original_image, image_data_dequantized)\n",
-    "print(pae.PAE_data)\n"
+    "print(f\"Pae: {pae.calculate_pae()}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mse: 4.3975217819213865\n"
+     ]
+    }
+   ],
+   "source": [
+    "### MSE ###\n",
+    "mse = Metrics(original_image, image_data_dequantized)\n",
+    "print(f\"Mse: {mse.calculate_mse()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Psnr: 41.7327193132994 dB\n"
+     ]
+    }
+   ],
+   "source": [
+    "### PSNR ###\n",
+    "psnr = Metrics(original_image, image_data_dequantized)\n",
+    "print(f\"Psnr: {psnr.calculate_psnr()} dB\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
