MSE, PSNR, PAE, done

--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -80,19 +80,19 @@
       "  [130 131 132 ... 130 130 129]\n",
       "  [129 129 128 ... 125 126 130]\n",
       "  [129 127 129 ... 123 129 131]]]\n",
-      "Imagen quantizada: [[[12. 12. 11. ... 11. 10. 10.]\n",
-      "  [12. 12. 12. ... 11. 11. 10.]\n",
-      "  [12. 12. 12. ... 10. 10. 10.]\n",
+      "Imagen quantizada: [[[4. 4. 3. ... 3. 3. 3.]\n",
+      "  [4. 4. 4. ... 3. 3. 3.]\n",
+      "  [4. 4. 4. ... 3. 3. 3.]\n",
       "  ...\n",
-      "  [13. 13. 13. ... 13. 13. 12.]\n",
-      "  [12. 12. 12. ... 12. 12. 13.]\n",
-      "  [12. 12. 12. ... 12. 12. 13.]]]\n"
+      "  [4. 4. 4. ... 4. 4. 4.]\n",
+      "  [4. 4. 4. ... 4. 4. 4.]\n",
+      "  [4. 4. 4. ... 4. 4. 4.]]]\n"
      ]
     }
    ],
    "source": [
     "### Quantize ###\n",
-    "quantize = Quantizer(1, 10)\n",
+    "quantize = Quantizer(1, 30)\n",
     "image_data_quantized = ImageRaw.get_image_structure_empty()\n",
     "print(f\"Imagen Original: {original_image}\")\n",
     "quantize.quantize(original_image, image_data_quantized)\n",
@@ -102,67 +102,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dequantize: [[[120. 120. 110. ... 110. 100. 100.]\n",
-      "  [120. 120. 120. ... 110. 110. 100.]\n",
-      "  [120. 120. 120. ... 100. 100. 100.]\n",
+      "Dequantize: [[[120. 120.  90. ...  90.  90.  90.]\n",
+      "  [120. 120. 120. ...  90.  90.  90.]\n",
+      "  [120. 120. 120. ...  90.  90.  90.]\n",
       "  ...\n",
-      "  [130. 130. 130. ... 130. 130. 120.]\n",
-      "  [120. 120. 120. ... 120. 120. 130.]\n",
-      "  [120. 120. 120. ... 120. 120. 130.]]]\n"
+      "  [120. 120. 120. ... 120. 120. 120.]\n",
+      "  [120. 120. 120. ... 120. 120. 120.]\n",
+      "  [120. 120. 120. ... 120. 120. 120.]]]\n"
      ]
     }
    ],
    "source": [
     "### Dequantize ###\n",
-    "dequantize = Quantizer(1,10)\n",
+    "dequantize = Quantizer(1, 30)\n",
     "image_data_dequantized = ImageRaw.get_image_structure_empty()\n",
     "dequantize.dequantize(image_data_quantized, image_data_dequantized)\n",
     "print(f\"Dequantize: {image_data_dequantized}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pae: 9.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "### PAE ###\n",
-    "pae = Metrics(original_image, image_data_dequantized)\n",
-    "print(f\"Pae: {pae.calculate_pae()}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mse: 4.3975217819213865\n"
-     ]
-    }
-   ],
-   "source": [
-    "### MSE ###\n",
-    "mse = Metrics(original_image, image_data_dequantized)\n",
-    "print(f\"Mse: {mse.calculate_mse()}\")"
    ]
   },
   {
@@ -174,7 +136,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Psnr: 41.7327193132994 dB\n"
+      "Pae: 29.0\n",
+      "29.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "### PAE ###\n",
+    "pae = Metrics(original_image, image_data_dequantized)\n",
+    "print(f\"Pae: {pae.calculate_pae()}\")\n",
+    "print(pae.PAE_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mse: 15.09148006439209\n"
+     ]
+    }
+   ],
+   "source": [
+    "### MSE ###\n",
+    "mse = Metrics(original_image, image_data_dequantized)\n",
+    "print(f\"Mse: {mse.calculate_mse()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Psnr: 36.37748096263782 dB\n"
      ]
     }
    ],
