MSE, PSNR, PAE, okay, done , perfe+ bitpacking

--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,104 +31,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Max Value:  255\n",
-      "Min Value:  0\n",
-      "order zero entropy of the image:  7.426142695578908\n"
-     ]
-    }
-   ],
-   "source": [
-    "########STATISTICS##########\n",
-    "statistics = statistics(original_image)\n",
-    "entropy = statistics.compute_entropy()\n",
-    "print(\"order zero entropy of the image: \",entropy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "######SAVE RAW IMAGE######\n",
-    "decodedFile=\"../images/n1_GRAY.1_2560_2048_1_0_8_0_0_0_copy.raw\"\n",
-    "ImageRawDecoded = save_image_raw(decodedFile)\n",
-    "ImageRawDecoded.save_image_raw(original_image,\"uint8\")\n",
-    "###########"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Imagen Original: [[[123 123 118 ... 113 108 108]\n",
-      "  [125 124 122 ... 110 110 105]\n",
-      "  [124 123 123 ... 102 108 106]\n",
-      "  ...\n",
-      "  [130 131 132 ... 130 130 129]\n",
-      "  [129 129 128 ... 125 126 130]\n",
-      "  [129 127 129 ... 123 129 131]]]\n",
-      "Imagen quantizada: [[[4. 4. 3. ... 3. 3. 3.]\n",
-      "  [4. 4. 4. ... 3. 3. 3.]\n",
-      "  [4. 4. 4. ... 3. 3. 3.]\n",
-      "  ...\n",
-      "  [4. 4. 4. ... 4. 4. 4.]\n",
-      "  [4. 4. 4. ... 4. 4. 4.]\n",
-      "  [4. 4. 4. ... 4. 4. 4.]]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "### Quantize ###\n",
-    "quantize = Quantizer(1, 30)\n",
-    "image_data_quantized = ImageRaw.get_image_structure_empty()\n",
-    "print(f\"Imagen Original: {original_image}\")\n",
-    "quantize.quantize(original_image, image_data_quantized)\n",
-    "print(f\"Imagen quantizada: {image_data_quantized}\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dequantize: [[[120. 120.  90. ...  90.  90.  90.]\n",
-      "  [120. 120. 120. ...  90.  90.  90.]\n",
-      "  [120. 120. 120. ...  90.  90.  90.]\n",
-      "  ...\n",
-      "  [120. 120. 120. ... 120. 120. 120.]\n",
-      "  [120. 120. 120. ... 120. 120. 120.]\n",
-      "  [120. 120. 120. ... 120. 120. 120.]]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "### Dequantize ###\n",
-    "dequantize = Quantizer(1, 30)\n",
-    "image_data_dequantized = ImageRaw.get_image_structure_empty()\n",
-    "dequantize.dequantize(image_data_quantized, image_data_dequantized)\n",
-    "print(f\"Dequantize: {image_data_dequantized}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -136,8 +38,82 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pae: 29.0\n",
-      "29.0\n"
+      "order zero entropy of the image:  7.426142695578908\n"
+     ]
+    }
+   ],
+   "source": [
+    "########STATISTICS##########\n",
+    "statistics_data = statistics(original_image)\n",
+    "entropy = statistics_data.compute_entropy()\n",
+    "print(\"order zero entropy of the image: \",entropy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######SAVE RAW IMAGE######\n",
+    "# decodedFile=\"../images/n1_GRAY.1_2560_2048_1_0_8_0_0_0_copy.raw\"\n",
+    "# ImageRawDecoded = save_image_raw(decodedFile)\n",
+    "# ImageRawDecoded.save_image_raw(original_image,\"uint8\")\n",
+    "###########"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Check Quantize: [[[12. 12. 11. ... 11. 10. 10.]\n",
+      "  [12. 12. 12. ... 11. 11. 10.]\n",
+      "  [12. 12. 12. ... 10. 10. 10.]\n",
+      "  ...\n",
+      "  [13. 13. 13. ... 13. 13. 12.]\n",
+      "  [12. 12. 12. ... 12. 12. 13.]\n",
+      "  [12. 12. 12. ... 12. 12. 13.]]]\n",
+      "Entropia: 4.126742623824754\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Quantize ###\n",
+    "quantize = Quantizer(1, 10)\n",
+    "image_data_quantized = ImageRaw.get_image_structure_empty()\n",
+    "quantize.quantize(original_image, image_data_quantized)\n",
+    "quant_statics = statistics(image_data_quantized).compute_entropy()\n",
+    "print(f\"Entropia: {quant_statics}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Dequantize ###\n",
+    "dequantize = Quantizer(1, 10)\n",
+    "image_data_dequantized = ImageRaw.get_image_structure_empty()\n",
+    "dequantize.dequantize(image_data_quantized, image_data_dequantized)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pae: 9.0\n",
+      "9.0\n"
      ]
     }
    ],
@@ -150,14 +126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mse: 15.09148006439209\n"
+      "Mse: 27.425078010559083\n"
      ]
     }
    ],
@@ -169,14 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Psnr: 36.37748096263782 dB\n"
+      "Psnr: 33.78332059025732 dB\n"
      ]
     }
    ],
@@ -188,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
