--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-02T13:18:30.075969Z",
+     "start_time": "2023-11-02T13:18:30.012051Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -15,8 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-02T13:18:30.099960Z",
+     "start_time": "2023-11-02T13:18:30.068707Z"
+    }
+   },
    "outputs": [],
    "source": [
     "######LOAD RAW IMAGE######\n",
@@ -31,8 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-02T13:18:32.323116Z",
+     "start_time": "2023-11-02T13:18:30.074422Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -51,8 +66,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-02T13:18:32.329179Z",
+     "start_time": "2023-11-02T13:18:32.323642Z"
+    }
+   },
    "outputs": [],
    "source": [
     "######SAVE RAW IMAGE######\n",
@@ -64,8 +84,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-02T13:18:45.998488Z",
+     "start_time": "2023-11-02T13:18:32.334467Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -93,8 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-02T13:18:47.935568Z",
+     "start_time": "2023-11-02T13:18:46.008643Z"
+    }
+   },
    "outputs": [],
    "source": [
     "### Dequantize ###\n",
@@ -105,8 +135,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-02T13:18:50.322472Z",
+     "start_time": "2023-11-02T13:18:47.942291Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -126,8 +161,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-02T13:18:53.027742Z",
+     "start_time": "2023-11-02T13:18:50.377837Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -145,8 +185,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-02T13:18:56.912628Z",
+     "start_time": "2023-11-02T13:18:53.073218Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -164,8 +209,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-02T13:18:56.912922Z",
+     "start_time": "2023-11-02T13:18:56.910438Z"
+    }
+   },
    "outputs": [],
    "source": [
     "###BITPACKING CODING###\n",
